Implement authentication and authorization, refactor endpoints to use endpoint groups
